ecmascript/parser/tests/typescript-errors/tsc/moduleResolution/untypedModuleImport_withAugmentation/input.ts.stderr
error: Expected ';', '}' or <eof>
 --> $DIR/tests/typescript-errors/tsc/moduleResolution/untypedModuleImport_withAugmentation/input.ts:6:6
  |
6 | This file is not processed.
  |      ^^^^
  |
note: This is the expression part of an expression statement
 --> $DIR/tests/typescript-errors/tsc/moduleResolution/untypedModuleImport_withAugmentation/input.ts:6:1
  |
6 | This file is not processed.
  | ^^^^

